[package]
name = "actix-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-opentelemetry = { version = "0.17.0", features = ["opentelemetry-prometheus", "metrics", "metrics-prometheus", "prometheus"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
tracing = "0.1.40"
opentelemetry = { version = "0.22.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["metrics", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.21.0", features = ["rt-tokio-current-thread", "collector_client", "rt-tokio", "isahc_collector_client"] }
tracing-opentelemetry = { version = "0.23.0"}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
opentelemetry-prometheus = "0.15.0"
redis = { version = "0.25.2", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0"
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
tokio = { version = "1.37.0", features = ["full"] }
